[package]
name = "limited-vec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", optional = true}

[dev-dependencies]
bincode = '*'

[features]
default = ["with_serde"]
with_serde = ["serde"]
